{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 24,
  "lineage": "c2cc9f17-6189-4dba-a0ed-55de25680d39",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "ip_aula_data_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/publicIPAddresses/aula02-pIPMySQL",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.211.21.178",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "aula02-pIPMySQL",
            "resource_group_name": "aula02",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-aula02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/networkInterfaces/aula02-nic",
            "internal_domain_name_suffix": "5gvv0rnje4jujpqeupsuwyqusb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic-aula02",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/publicIPAddresses/aula02-PublicIP",
                "subnet_id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/virtualNetworks/aula02-VN1/subnets/aula02-SB1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-22-79-E7",
            "name": "aula02-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "aula02",
            "virtual_machine_id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Compute/virtualMachines/aula02-vm-principal"
          },
          "dependencies": [
            "azurerm_resource_group.aula02",
            "azurerm_subnet.sb-aula02",
            "azurerm_virtual_network.vn-aula02",
            "azurerm_public_ip.ip-aula02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-aula02MySQL",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/networkInterfaces/aula02-nicMySQL",
            "internal_domain_name_suffix": "5gvv0rnje4jujpqeupsuwyqusb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/publicIPAddresses/aula02-pIPMySQL",
                "subnet_id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/virtualNetworks/aula02-VN1/subnets/aula02-SB1"
              }
            ],
            "location": "eastus",
            "name": "aula02-nicMySQL",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "aula02"
          },
          "dependencies": [
            "azurerm_public_ip.publicipmysql",
            "azurerm_resource_group.aula02",
            "azurerm_subnet.sb-aula02",
            "azurerm_virtual_network.vn-aula02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nisg-aula02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/networkInterfaces/aula02-nic|/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/networkSecurityGroups/aula02-SG1",
            "network_interface_id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/networkInterfaces/aula02-nic",
            "network_security_group_id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/networkSecurityGroups/aula02-SG1"
          },
          "dependencies": [
            "azurerm_network_interface.nic-aula02",
            "azurerm_network_security_group.nsg-aula02",
            "azurerm_public_ip.ip-aula02",
            "azurerm_resource_group.aula02",
            "azurerm_subnet.sb-aula02",
            "azurerm_virtual_network.vn-aula02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nisgaMysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/networkInterfaces/aula02-nicMySQL|/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/networkSecurityGroups/aula02-NSGMySQL",
            "network_interface_id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/networkInterfaces/aula02-nicMySQL",
            "network_security_group_id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/networkSecurityGroups/aula02-NSGMySQL"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgmysql",
            "azurerm_public_ip.publicipmysql",
            "azurerm_resource_group.aula02",
            "azurerm_subnet.sb-aula02",
            "azurerm_virtual_network.vn-aula02",
            "azurerm_network_interface.nic-aula02MySQL"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-aula02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/networkSecurityGroups/aula02-SG1",
            "location": "eastus",
            "name": "aula02-SG1",
            "resource_group_name": "aula02",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.aula02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgmysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/networkSecurityGroups/aula02-NSGMySQL",
            "location": "eastus",
            "name": "aula02-NSGMySQL",
            "resource_group_name": "aula02",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mysql",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.aula02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip-aula02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/publicIPAddresses/aula02-PublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.102.52.47",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "aula02-PublicIP",
            "resource_group_name": "aula02",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.aula02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicipmysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/publicIPAddresses/aula02-pIPMySQL",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.211.21.178",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "aula02-pIPMySQL",
            "resource_group_name": "aula02",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.aula02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sb-aula02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/virtualNetworks/aula02-VN1/subnets/aula02-SB1",
            "name": "aula02-SB1",
            "resource_group_name": "aula02",
            "virtual_network_name": "aula02-VN1"
          },
          "dependencies": [
            "azurerm_resource_group.aula02",
            "azurerm_virtual_network.vn-aula02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vn-aula02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "10.0.0.4",
              "10.0.0.5"
            ],
            "guid": "455dabf9-27a9-4493-be04-a3e54b621491",
            "id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/virtualNetworks/aula02-VN1",
            "location": "eastus",
            "name": "aula02-VN1",
            "resource_group_name": "aula02",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/8311a5ff-cfce-487d-a1d3-4e912bbe3572/resourceGroups/aula02/providers/Microsoft.Network/virtualNetworks/aula02-VN1/subnets/aula02-SB1",
                "name": "aula02-SB1"
              }
            ],
            "tags": {
              "environment": "Production",
              "turma": "es22"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.aula02"
          ]
        }
      ]
    }
  ]
}